# stanford_self_driving_car_code

./: README.md
driving/applanix/: CMakeLists.txt  package.xml
driving/asyncwriter/: CMakeLists.txt  package.xml
driving/asyncwriter/src/: async_writer.cc
driving/controller/: CMakeLists.txt  package.xml
driving/dgcglobal/: CMakeLists.txt  package.xml
driving/dgcglobal/src/: global.cpp
driving/driving_common/: CMakeLists.txt  package.xml
driving/driving_common/src/: comp_stdio.cpp
driving/gls/: CMakeLists.txt  package.xml
driving/glsupport/: CMakeLists.txt  package.xml
driving/lltransform/: CMakeLists.txt  package.xml
driving/localize/: CMakeLists.txt  package.xml
driving/localize/src/: laserMap.cpp  localizeVelodyne.cpp  map_velodyne.cpp  terrainmap.cpp
driving/vehiclesim/: CMakeLists.txt  package.xml
driving/vehiclesim/src/: multisim.cpp  vehicle.cpp  vehiclesim.cpp
libraries/filter/: CMakeLists.txt  package.xml
libraries/filter/src/: kalman_filter.cpp
libraries/matplotlib_interface/: CMakeLists.txt  package.xml
libraries/matplotlib_interface/include/matplotlib_interface/: matplotlib_interface.h
perception/chamfer_matching/: CMakeLists.txt  package.xml
perception/chamfer_matching/src/: chamfer_matching.cpp
perception/cluster_descriptors/: CMakeLists.txt  cluster_descriptors.cpp  package.xml
perception/cluster_descriptors/include/cluster_descriptors/: cluster_descriptors.h
perception/dgcgrid/: CMakeLists.txt  package.xml
perception/grid/: CMakeLists.txt  package.xml
perception/kalman_multitracker/: CMakeLists.txt  package.xml
perception/linear_kalman_filter/: CMakeLists.txt  package.xml
perception/multibooster/: CMakeLists.txt  multibooster.cpp  multibooster_dataset.cpp  package.xml
perception/perception/: CMakeLists.txt  package.xml
perception/perception/src/: background_extractor.cpp  integration.cc  kalman_multitracker.cpp  main.cpp  multibooster_support.cpp  old_track_vis.cpp  perception.cpp  pointCloudClient.cpp  test_cloud_projection.cpp  track_extractor.cpp  track_manager.cpp  track_stats.cpp  track_visualizer.cpp  tracked_obstacle.cpp  tracker.cc  utils.cc  veloClient.cpp
perception/pipeline/: CMakeLists.txt  package.xml
perception/pipeline/src/: pipeline.cpp
perception/point_cloud_mapping/: CMakeLists.txt  package.xml
perception/point_cloud_mapping/include/point_cloud_mapping/: cloud_io.h
perception/point_cloud_mapping/include/point_cloud_mapping/geometry/: angles.h  areas.h  distances.h  intersections.h  nearest.h  point.h  projections.h  statistics.h  transforms.h
perception/point_cloud_mapping/include/point_cloud_mapping/kdtree/: kdtree.h  kdtree_ann.h  kdtree_flann.h
perception/point_cloud_mapping/src/: normal_estimation.cpp  normal_estimation_in_proc.cpp
perception/point_cloud_mapping/src/cloud_geometry/: nearest.cpp  transforms.cpp
perception/point_cloud_mapping/src/cloud_io/: misc.cpp  read.cpp
perception/point_cloud_mapping/src/cloud_kdtree/: kdtree_ann.cpp  kdtree_flann.cpp
perception/point_cloud_mapping/src/sample_consensus/: lmeds.cpp  sac.cpp  sac_model_circle.cpp  sac_model_cylinder.cpp  sac_model_line.cpp  sac_model_parallel_lines.cpp  sac_model_plane.cpp  sac_model_sphere.cpp
perception/point_cloud_mapping/test/cloud_geometry/: test_geometry_areas.cpp
perception/point_cloud_mapping/test/sample_consensus/: test_cylinder_fit.cpp
perception/velodyne/: CMakeLists.txt  package.xml
perception/velodyne/src/: Driver.cpp  Points.cpp  Project3D.cpp  velodyne.cpp
planner/aw_chsm_planning/: CMakeLists.txt  package.xml
planner/aw_chsm_planning/include/: trajectoryEvaluator.h
planner/aw_chsm_planning/src/: obstacleUpdates.cpp
planner/aw_geometry/: CMakeLists.txt  package.xml
planner/aw_geometry/include/: aw_CGAL.h
planner/aw_rndf/: CMakeLists.txt  package.xml
planner/aw_rndf/include/: aw_lane.h
planner/aw_topology/: CMakeLists.txt  package.xml
planner/aw_topology/include/: aw_VehicleManager.hpp
planner/aw_topology/src/: aw_BlockadeManager.cpp
planner/carlist/: CMakeLists.txt  package.xml
planner/curvesmoothing/: CMakeLists.txt  package.xml
planner/curvesmoothing/include/: curveSmoother.h
planner/polytraj/: CMakeLists.txt  package.xml
