<package format="2">
  <name>applanix</name>
  <version>0.0.0</version>
  <description>Applanix is a driver that communicates with the POSLV hardware</description>
  <maintainer email="stanforddriving@todo.todo">stanforddriving</maintainer>
  
  <license>BSD</license>
  <url>http://ros.org/wiki/applanix</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>


