<package format="2">
  <name>dgcglobal</name>
  <version>0.0.0</version>
  <description>dgcglobal</description>
  <maintainer email="stanforddriving@todo.todo">stanforddriving</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/dgcglobal</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>


