<package format="2">
  <name>glsupport</name>
  <version>0.0.0</version>
  <description>glsupport</description>
  <maintainer email="stanforddriving@todo.todo">stanforddriving</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/glsupport</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>


