<package format="2">
  <name>kalman_multitracker</name>
  <version>0.0.0</version>
  <description>kalman_multitracker</description>
  <maintainer email="stanforddriving@todo.todo">stanforddriving</maintainer>
  
  <license>BSD</license>
  <url>http://ros.org/wiki/kalman_multitracker</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
</package>


