<package format="2">
  <name>pipeline</name>
  <version>0.0.0</version>
  <description>pipeline</description>
  <maintainer email="StanfordDriving@todo.todo">Stanford Driving</maintainer>

  <license>BSD</license>
  <url>http://ros.org/wiki/pipeline</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  
</package>


